create signup component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  border: 1px solid red;
-  margin: 20px;
+  /* border: 1px solid red; */
+  min-height: 100vh;
+  box-sizing: border-box;
 }
 
