--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
-body {
-  border: 1px solid green;
+body, html {
+  /* border: 1px solid green; */
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
