--- a/frontend/src/components/Authentication/SignupForm/style.css
+++ b/frontend/src/components/Authentication/SignupForm/style.css
@@ -3,7 +3,7 @@
   padding: 50px 0px 0px 50px; 
   width: 50%;
   height: 100%;
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
 }
 .header{
   text-align: center;
