--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,5 @@
 .App {
-  /* border: 1px solid red; */
-  background-color: #f3f3f3;
-  min-height: 100vh;
+  border: 1px solid red;
   box-sizing: border-box;
 }
 
