--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,21 @@
-body, html {
-  /* border: 1px solid green; */
-  width: 100%;
-  height: 100vh;
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  overflow: hidden;
+}
+
+
+html {
+  box-sizing: border-box;
+}
+
+body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  min-height: 100vh;
+  border: 1px solid green;
+  background-color: #f3f3f3;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
